[package]
name = "sese"
version = "0.1.0"
authors = ["thiolliere <gui.thiolliere@gmail.com>"]

[dependencies]
three = "0.3"
rand = "0.4"
typenum = "1"
ron = "0.2"
lazy_static = "1"
pathfinding = "0.7"
nalgebra = "0.13"
generic-array = "0.8"
serde_derive = "1.0"
serde = "1.0"
specs = "0.10"
conrod = "0.58"
