[package]
name = "sese"
version = "0.1.0"
authors = ["thiolliere <gui.thiolliere@gmail.com>"]

[dependencies]
vulkano = "0.9"
vulkano-shader-derive = "0.9"
vulkano-win = "0.9"
winit = "0.11"
nalgebra = "0.13"
ncollide = { git = "https://github.com/thiolliere/ncollide/", branch = "send_sync_master" }
nphysics3d = { git = "https://github.com/thiolliere/nphysics/", branch = "send_sync_master" }
specs = "0.12"
hibitset = "0.5"
alga = "0.5"
rand = "0.5"
lazy_static = "1"
pathfinding = "0.8"
ron = "0.3"
serde_derive = "1.0"
serde = "1.0"
shuffled-iter = "0.2"
wavefront_obj = "5"
typenum = "1"
generic-array = "0.8"
fps_counter = "1"
app_dirs2 = "2"
rodio = "0.8"
show_message = { git = "https://github.com/thiolliere/show_message/" }
derive_deref = "1"
failure = "0.1"
gilrs = "0.6"
image = "0.19"
enum-iterator-derive = "0.1"
itertools = "0.7"
rusttype = { version = "0.6", features = ["gpu_cache"] }
palette = "0.4"
